    + Bump Standards-Version to 3.9.5; no changes needed.
    + Use canonical versions of VCS URLs.
  * debian/rules:
    + Support noopt and debug in DEB_BUILD_OPTIONS.
    + Disable JIT and MacroAssembler on powerpcspe and mips64el.
    + No need to pass --enable-wayland-target anymore, it's automatically
      enabled now.
    + Disable parallel builds since they're unstable at the moment.
  * debian/libwebkitgtk-1.0-0.symbols,
    debian/libwebkitgtk-3.0-0.symbols,
    debian/libwebkit2gtk-3.0-25.symbols:
    + Updated for the new symbols.

 -- Alberto Garcia <berto@igalia.com>  Tue, 26 Nov 2013 16:55:59 +0200

webkitgtk (2.3.2-1) experimental; urgency=low

  * New upstream release.
  * debian/patches/40_hppa_platform_h.patch,
    debian/patches/41_hppa_build_fix.patch,
    debian/patches/50_bsd-hurd-build-fix.patch,
    debian/patches/60_add-missing-include.patch,
    debian/patches/61_add-another-missing-include.patch,
    debian/patches/70_Add-stubs-for-missing-symbols-in-dom-bindings.patch:
    + Removed, merged upstream.
  * debian/patches/30_gtkdoc_fixxref_warnings.patch:
    + Drop unapplied patch that we don't need anymore.
  * debian/patches/13_thread-safe-icon-db.patch:
    + Drop unapplied patch that was fixed upstream a long time ago.
  * debian/patches/12_large-mem-page.patch:
    + Drop unapplied patch, it hasn't been applied in quite some time
      and we haven't heard of any complains. Besides, the patch no
      longer applies as the code it touched has been largely reworked
      or removed.
  * debian/patches/14_ia64-wide-ptr.patch,
    debian/patches/15_ia64-use-system-malloc.patch:
    + Dropped. The former wasn't been applied and needs rebasing if still
      needed. The second is probably useless given all the other patches
      that were needed on IA64 are gone. It may not be needed anymore as
      the code that the patch tries to workaround may be fixed now.
      If these or any other patches are needed for IA64, they should be