@@ -139,8 +139,6 @@ ifeq (2.0,$(filter 2.0,$(GTK_VERSIONS)))
 	$(MAKE) $(MAKEARGUMENTS) -C build-2.0
 
 	$(MAKE) -C build-2.0 install DESTDIR="$(CURDIR)"/debian/tmp-2.0
-	[ ! -d debian/tmp-2.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkitgtk-1.0-0/libexec ] && \
-		install -d -m 755 debian/tmp-2.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkitgtk-1.0-0/libexec || true
 	install -d -m 755 debian/tmp-2.0/usr/share/doc/libwebkitgtk-dev/html/
 	install -m 644 Documentation/webkitgtk/html/* \
 		debian/tmp-2.0/usr/share/doc/libwebkitgtk-dev/html/
@@ -166,15 +164,11 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	$(MAKE) $(MAKEARGUMENTS) -C build-3.0
 
 	$(MAKE) -C build-3.0 install DESTDIR="$(CURDIR)"/debian/tmp-3.0
-	[ ! -d debian/tmp-3.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkitgtk-3.0-0/libexec ] && \
-		install -d -m 755 debian/tmp-3.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkitgtk-3.0-0/libexec || true
 	install -d -m 755 debian/tmp-3.0/usr/share/doc/libwebkitgtk-3.0-dev/html
 	install -m 644 Documentation/webkitgtk/html/* \
 		debian/tmp-3.0/usr/share/doc/libwebkitgtk-3.0-dev/html/
 
 ifeq ($(ENABLE_WEBKIT2),yes)
-	[ ! -d debian/tmp-3.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkit2gtk-3.0/libexec ] && \
-		install -d -m 755 debian/tmp-3.0/usr/lib/$(DEB_HOST_MULTIARCH)/webkit2gtk-3.0/libexec || true
 	install -d -m 755 debian/tmp-3.0/usr/share/doc/libwebkit2gtk-3.0-dev/html
 	install -m 644 Documentation/webkit2gtk/html/* \
 		debian/tmp-3.0/usr/share/doc/libwebkit2gtk-3.0-dev/html/
